tests/paczka1/fuzzy1/15081748.err
Error in line 9: 9faU2tmJ S251 41,1
Error in line 4: C3XWEhX A903 77,2
Error in line 15: 9faU2tmJ A903 63,6
Error in line 22: 9faU2¬mJ S65 93,7
